[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "saguaro-pipeline"
readme = "README.md"
license.file = "LICENSE"
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies.file = "requirements.txt"

[tool.setuptools_scm]
