[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "saguaro-pipeline"
version = "2.2.1"
readme = "README.md"
license.file = "LICENSE"
dynamic = ["dependencies"]

[project.scripts]
median-watcher = "saguaro_pipeline.median_watcher:cli"
saguaro-pipe = "saguaro_pipeline.saguaro_pipe:cli"
saguaro-reingest = "saguaro_pipeline.ingestion:cli"

[tool.setuptools.dynamic]
dependencies.file = "requirements.txt"

[tool.setuptools_scm]
